--- a/code/MauiApp1/Platforms/Android/AndroidManifest.xml
+++ b/code/MauiApp1/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.INTERNET" />
+﻿<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.companyname.P_ReadME_GHE">
+
+    <!-- ✅ Autorisations -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- ✅ Application correctement ouverte avec autorisation HTTP -->
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/appicon"
+        android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        android:label="P_ReadME_GHE"
+        android:theme="@style/Maui.SplashTheme">
+    </application>
+
 </manifest>
